change background color or text color

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@
 :root {
   font-family: sans;
   color-scheme: light dark;
-  /* color: rgba(255, 255, 255, 0.87); */
-  background-color: #f6f0f0c4;
+  background-color: black;
 }
 
 
