Add _redirect file in public folder

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root {
   font-family: sans;
   color-scheme: light dark;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.986);
 }
 
 
