Add stock api and change the news api

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 :root {
   font-family: sans;
   color-scheme: light dark;
-  background-color: rgba(0, 0, 0, 0.986);
+  /* background-color: rgba(0, 0, 0, 0.986); */
+    background: linear-gradient(to right, black, #0f172a, black);
 }
 
 
